--- a/yaml_folder/Lambda_CloudFormation.yaml
+++ b/yaml_folder/Lambda_CloudFormation.yaml
@@ -5,34 +5,30 @@ Parameters:
     Type: String
     Description: (Optional) Name of the account.
     AllowedPattern: ^.*[^0-9]$
-  LambdaHandlerPath:
-    Type: String
-    Description: Path of Lambda Handler. Must be separate file.
-    AllowedPattern: ^.*[^0-9]$
 Outputs:
   LambdaRoleARN:
     Description: Role for Lambda execution.
     Value:
       Fn::GetAtt:
         - LambdaRole
-        - Arn
+        - "Arn"
     Export:
       Name:
         Fn::Sub: LambdaRole
   LambdaFunctionName:
     Value:
-    Ref: LambdaFunction
+      Ref: LambdaFunction
   LambdaFunctionARN:
     Description: Lambda Function ARN.
     Value:
       Fn::GetAtt:
         - LambdaFunction
-        - Arn
+        - "Arn"
     Export:
       Name:
         Fn::Sub: LambdaARN-${EnvName}
 Resources:
-  LambdaRole:
+  iamRole:
     Type: AWS::IAM::Role
     Properties:
       AssumeRolePolicyDocument:
@@ -51,7 +47,7 @@ Resources:
                 - cloudwatch:DescribeAlarms
                 - cloudwatch:DeleteAlarms
                 Effect: Allow
-                Resource: *
+                Resource: '*'
         - PolicyName: ec2-instances
           PolicyDocument:
             Version: '2012-10-17'
@@ -60,24 +56,22 @@ Resources:
                 - ec2:DescribeInstances
                 - ec2:DescribeTags
                 Effect: Allow
-                Resource: *
+                Resource: '*'
+      RoleName: iam-cloudwatch-cleaner-role
   CloudwatchCleanerFunction:
     Type: AWS::Lambda::Function
     Properties:
       FunctionName:
-        Fn::Sub: lambda-function-${EnvName}
+        Fn::Sub: cloudwatch-cleaner-function-${EnvName}
       Description: LambdaFunction for Testing
       Runtime: python3.7
       Code:
         S3Bucket: core-tech-ops
         S3Key: lambda-functions/Cloudwatch_Clearner_Test.py
-      Handler: ${LambdaHandlerPath}
+      Handler: lambda_function.lambda_handler
       MemorySize: 128
-      Timeout: 30
-      Role:
-        Fn::GetAtt:
-          - iamRole
-          - Arn
+      Timeout: 900
+      Role: !GetAtt iamRole.Arn
       Enrivonment:
         Variables:
           ENV:
@@ -89,12 +83,12 @@ Resources:
       FunctionName:
         Fn::GetAtt:
           - CloudwatchCleanerFunction
-          - Arn
+          - "Arn"
       Principal: events.amazonaws.com
       SourceARN:
         Fn::GetAtt:
           - CloudwatchCleanerSchedule
-          - Arn
+          - "Arn"
   CloudwatchCleanerSchedule:
     Type: AWS::Events::Rule
     Properties:
@@ -107,5 +101,5 @@ Resources:
           Arn:
             Fn::GetAtt:
               - CloudwatchCleanerFunction
-              - Arn
+              - "Arn"
             Id: CloudwatchCleanerFunction
