cooking with gas

--- a/yaml_folder/Lambda_CloudFormation.yaml
+++ b/yaml_folder/Lambda_CloudFormation.yaml
@@ -102,5 +102,5 @@ Resources:
           Arn:
             Fn::GetAtt:
               - CloudwatchCleanerFunction
-              - "Arn"
+              - Arn
             Id: CloudwatchCleanerFunction
